# vtkCellLocators

./: .gitignore  CMakeLists.txt  README.md  build.bat  pyproject.toml  test.py
_dev_env/: dev-env.yaml  make_env.py
src/: CMakeLists.txt  CellLocator.cxx  CellLocator.h  FindClosestPoints.cxx  FindClosestPoints.h  OBBTree.cxx  OBBTree.h  StaticCellLocator.cxx  StaticCellLocator.h  __init__.py.in  _build_paths.py.in  cellLocator.h  main.cpp  printer.h  vtk.module  vtkCellLocators.cxx  vtkCellLocators.h
src/cellLocator/: __init__.py  cellLocator.pyi
