[build-system]
requires = [
    "scikit-build-core",
    "vtk==9.3.1",
    "tbb-devel",
    "pymatsolver",
    "scipy",
]
build-backend = "scikit_build_core.build"

[project]
name = "cellLocator"
version = "0.0.1"
requires-python = ">= 3.8"
dependencies = ["vtk == 9.3.1", "pymatsolver", "scipy"]

[tool.scikit-build]
# The versions of CMake to allow as a python-compatible specifier.
# cmake.version = ""

# A list of args to pass to CMake when configuring the project.
cmake.args = ["-DCMAKE_INSTALL_PREFIX=./install/site-packages"]

# A table of defines to pass to CMake when configuring the project. Additive.
# cmake.define = {}

# The CMake build directory. Defaults to a unique temporary directory.
build-dir = "build/{wheel_tag}"

# The build type to use when building the project.
cmake.build-type = "Release"

# The source directory to use when building the project.
cmake.source-dir = "."

# The versions of Ninja to allow.
ninja.version = ">=1.5"

# Use Make as a fallback if a suitable Ninja executable is not found.
# ninja.make-fallback = true

# The logging level to display.
logging.level = "WARNING"

# Files to include in the SDist even if they are skipped by default. Supports gitignore syntax.
# sdist.include = []

# Files to exclude from the SDist even if they are included by default. Supports gitignore syntax.
# sdist.exclude = []

# Try to build a reproducible distribution.
sdist.reproducible = true

# If set to True, CMake will be run before building the SDist.
sdist.cmake = false

# A list of packages to auto-copy into the wheel.
# wheel.packages = ["src/<package>", "python/<package>", "<package>"]

# The Python version tag used in the wheel file.
# wheel.py-api = ""

# Fill out extra tags that are not required.
# wheel.expand-macos-universal-tags = false

# The CMake install prefix relative to the platlib wheel path.
# wheel.install-dir = "install"
# You can select a different wheel target directory, as well, but that syntax is experimental; install to ${SKBUILD_DATA_DIR}, etc. from within CMake instead for now.

# A list of license files to include in the wheel. Supports glob patterns.
# wheel.license-files = ""

# Run CMake as part of building the wheel.
wheel.cmake = true

# Target the platlib or the purelib.
# wheel.platlib = ""

# A set of patterns to exclude from the wheel.
# wheel.exclude = []

# The build tag to use for the wheel. If empty, no build tag is used.
wheel.build-tag = ""

# If CMake is less than this value, backport a copy of FindPython.
backport.find-python = "3.26.1"

# Select the editable mode to use. Can be "redirect" (default) or "inplace".
editable.mode = "redirect"

# Turn on verbose output for the editable mode rebuilds.
editable.verbose = true

# Rebuild the project when the package is imported.
# editable.rebuild = false

# Extra args to pass directly to the builder in the build step.
# build.tool-args = []

# The build targets to use when building the project.
# build.targets = []

# Verbose printout when building.
build.verbose = true

# Additional ``build-system.requires``.
# build.requires = []

# The components to install.
# install.components = []

# Whether to strip the binaries.
# install.strip = true

# The path (relative to platlib) for the file to generate.
# generate[].path = ""

# The template string to use for the file.
# generate[].template = ""

# The path to the template file. If empty, a template must be set.
# generate[].template-path = ""

# The place to put the generated file.
# generate[].location = "install"

# A message to print after a build failure.
# messages.after-failure = ""

# A message to print after a successful build.
# messages.after-success = ""

# Add the python build environment site_packages folder to the CMake prefix paths.
search.site-packages = true

# List dynamic metadata fields and hook locations in this table.
# metadata = {}

# Strictly check all config options.
strict-config = true

# Enable early previews of features not finalized yet.
experimental = false

# If set, this will provide a method for backward compatibility.
# minimum-version = "0.11"  # current version


# [tool.cibuildwheel]
# test-skip = "*universal2:arm64"

# [tool.ruff]
# target-version = "py39"

# [tool.ruff.lint]
# extend-select = [
#   "B",   # flake8-bugbear
#   "I",   # isort
#   "PGH", # pygrep-hooks
#   "RUF", # Ruff-specific
#   "UP",  # pyupgrade
# ]
